[package]
name = "ek-tm4c1294xl"
version = "0.1.0"
authors = ["Alexander Müllner <es16m017@technikum-wien.at>"]
build = "build.rs"

[profile.dev]
panic = "abort"
lto = false
opt-level = 0
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true

[dependencies]
cortexm4 = { git = "https://github.com/tock/tock", tag = "release-1.3" }
capsules = { git = "https://github.com/tock/tock", tag = "release-1.3" }
kernel = { git = "https://github.com/tock/tock", tag = "release-1.3" }
tm4c129x = { path = "../../chips/tm4c129x" }
