[package]
name = "nrf51dk"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
build = "build.rs"

[profile.dev]
panic = "abort"
lto = false
opt-level = "z"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true

[dependencies]
cortexm0 = { git = "https://github.com/tock/tock", tag = "release-1.3" }
capsules = { git = "https://github.com/tock/tock", tag = "release-1.3" }
kernel = { git = "https://github.com/tock/tock", tag = "release-1.3" }
nrf51 = { path = "../../chips/nrf51" }
nrf5x = { git = "https://github.com/tock/tock", tag = "release-1.3" }
